# imitatus

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
examples/: test_requests.http
src/: server.py
src/imitatus/: __init__.py  server.py
tests/: test_server.py
